Fix button wrap issue.

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1862,6 +1862,7 @@ body.no-connection-message-visible #status-message {
     button {
       margin-left: 3px;
       margin-right: 3px;
+      white-space: nowrap;
     }
     hr {
       vertical-align: top;
